--- a/bin/projects/dbatools/dbatools.Tests/dbatools.Tests.csproj
+++ b/bin/projects/dbatools/dbatools.Tests/dbatools.Tests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Connection\ManagementConnectionTest.cs" />
     <Compile Include="Parameter\DbaInstanceParamaterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\DbaDateTimeBaseTest.cs" />
     <Compile Include="Utility\SizeTest.cs" />
   </ItemGroup>
   <ItemGroup>
